# CllineAI

./: README.md
.github/workflows/: auto-recover-build.yml  build-and-release-exe.yml  build.yml
cleanai/: CMakeLists.txt  Package.appxmanifest  app.manifest
cleanai/assets/strings/: ru-RU.resw
cleanai/packaging/: create_installer.bat
cleanai/src/: App.cpp  App.h  App.xaml  MainWindow.cpp  MainWindow.h  MainWindow.xaml  ci_main.cpp  main.cpp
cleanai/src/Core/: DiskScanner.cpp  DiskScanner.h  HistoryDatabase.cpp  HistoryDatabase.h  OllamaClient.cpp  OllamaClient.h  QuarantineManager.cpp  QuarantineManager.h  TreemapLayout.cpp  TreemapLayout.h
cleanai/src/Models/: FileItem.h  Recommendation.h
cleanai/src/Pages/: HistoryPage.cpp  HistoryPage.h  HistoryPage.xaml  OnboardingPage.cpp  OnboardingPage.h  OnboardingPage.xaml  RecommendationsPage.cpp  RecommendationsPage.h  RecommendationsPage.xaml  ScanPage.cpp  ScanPage.h  ScanPage.xaml  TreeMapPage.cpp  TreeMapPage.h  TreeMapPage.xaml
cleanai/tests/: CoreLogicTests.cpp
